--- a/_pages/404.md
+++ b/_pages/404.md
@@ -7,10 +7,15 @@ permalink: /404.html
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
 
-<script type="text/javascript">
-  var GOOG_FIXURL_LANG = 'en';
-  var GOOG_FIXURL_SITE = '{{ site.url }}'
+<script>
+  (function() {
+    var cx = '002029219115404207824:9vubhfganh4';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
 </script>
-<script type="text/javascript"
-  src="//linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
-</script>
+<gcse:search></gcse:search>
