--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,6 +2,7 @@
 title: "Page Not Found"
 sitemap: false
 permalink: /404.html
+excerpt: "Page not found. Your pixels are in another canvas."
 ---
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
@@ -18,5 +19,6 @@ Sorry, but the page you were trying to view does not exist --- perhaps you can t
   })();
 </script>
 <gcse:search></gcse:search>
+
 
 
